--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,14 +35,16 @@ dependencies:
   timezone: ^0.9.4
   intl: ^0.17.0
   table_calendar: ^3.0.6
+  uuid: ^3.0.6
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
 
 dev_dependencies:
-  flutter_test:
+  flutter_driver:
     sdk: flutter
+  test: any
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
