--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,9 +40,7 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   path_provider: ^2.1.1
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  audioplayers: ^5.2.1
   cupertino_icons: ^1.0.8
 
 dev_dependencies:
@@ -94,3 +92,6 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
+  assets:
+    - assets/sounds/
