--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,9 +63,11 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/sounds/achievement_unlocked.mp3
+    - assets/sounds/level_up.mp3
+    - assets/sounds/streak_milestone.mp3
+    - assets/sounds/task_complete.mp3
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
@@ -92,6 +94,3 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
-
-  assets:
-    - assets/sounds/
